# AR-streaming-with-MPEG-DASH

./: CMakeLists.txt  README.md
Main/: Main.cpp  decOpt.txt
cfg/rate/: 1  ctc-r0.cfg  high.cfg  low.cfg  mid.cfg
cfg/sequence/: 1  loot_high.cfg  loot_low_s1.cfg  loot_s1_5.cfg  loot_s2.cfg  loot_s3.cfg  loot_s4.cfg  loot_vox10.cfg
cpp/: Draw.cpp  Draw_singleFrame.cpp  file.cpp
dec_test/: README.md
dependencies/HDRTools/: CHANGES.txt  README.md
dependencies/HDRTools/cfg/: HDRConvertToTIFF.cfg
dependencies/HDRTools/common/: common.vc2015.vcxproj  common.vc2015.vcxproj.filters  common.vcxproj  common.vcxproj.filters  dependencies
dependencies/HDRTools/common/inc/: AVILib.H  AnalyzeGamut.H  ColorSpaceMatrix.H  ColorTransformClosedLoopCr.H  ColorTransformClosedLoopRGB.H  ColorTransformYAdjust.H  ColorTransformYMultiply.H  Conv400Generic.H  Conv420to444NN.H  Conv422to444NN.H  ConvertColorFormat.H  Defines.H  DistortionMetric.H  DistortionMetricDeltaE.H  DistortionMetricJVETMSSSIM.H  DistortionMetricPSNR.H  DistortionMetricVQM.H  DistortionMetricWTPSNR.H  Eigenvalue.H  Frame.H  FrameFilter.H  FrameScale.H  FrameScaleCopy.H  FrameScaleGaussian.H  FrameScaleHamming.H  FrameScaleHanning.H  FrameScaleLanczos.H  FrameScaleLanczosInt.H  FrameScaleNN.H  FrameScaleNull.H  FrameScaleSineWindow.H  Global.H  IOPPM.H  IOVideo.H  ImgToBufBasic.H  Input.H  InputPNG.H  InputPPM.H  LookUpTable.H  Output.H  (+13 more)
dependencies/HDRTools/common/src/: AddNoise.cpp  AnalyzeGamut.cpp  BufToImgEndian.cpp  ColorTransformClosedLoopRGB.cpp  ColorTransformGeneric.cpp  ColorTransformYAdjustFull.cpp  ColorTransformYAdjustXYZ.cpp  ColorTransformYLuma.cpp  ColorTransformYUV.cpp  Conv444to420BI.cpp  Conv444to422Generic.cpp  ConvFloatToFixed.cpp  Convert.cpp  DistortionMetric.cpp  DistortionMetricBlockAct.cpp  DistortionMetricBlockinessJ341.cpp  DistortionMetricGSSIM.cpp  DistortionMetricJVETMSSSIM.cpp  DistortionMetricMSSSIM.cpp  DistortionMetricPSNR.cpp  DistortionMetricSSIM.cpp  DistortionMetricSigmaCompare.cpp  DistortionMetricTFMSSSIM.cpp  DistortionMetricTFSSIM.cpp  DistortionMetricVIF.cpp  DistortionMetricWTPSNR.cpp  DistortionMetricmPSNR.cpp  DistortionMetricmPSNRfast.cpp  Eigenvalue.cpp  FFT.cpp  Filter1D.cpp  Frame.cpp  FrameFilterDeblock.cpp  FrameScale.cpp  FrameScaleBiCubic.cpp  FrameScaleCopy.cpp  FrameScaleGaussian.cpp  FrameScaleHamming.cpp  FrameScaleHanning.cpp  FrameScaleLanczos.cpp  (+27 more)
dependencies/HDRTools/projects/ChromaConvert/: ChromaConvert.vc2015.vcxproj  ChromaConvert.vcxproj
dependencies/HDRTools/projects/HDRConvScaler/: HDRConvScaler.vc2015.vcxproj
dependencies/HDRTools/projects/HDRConvert/: HDRConvert.vcxproj
dependencies/HDRTools/projects/HDRVQM/: CMakeLists.txt  (+1 more)
dependencies/HM-16.20+SCM-8.8/: PATCHED
dependencies/HM/cfg/: encoder_randomaccess_main.cfg  encoder_randomaccess_main10.cfg
dependencies/HM/doc/: Doxyfile  mainpage.h  software-manual.tex
dependencies/HM/source/App/SEIRemovalApp/: CMakeLists.txt  SEIRemovalApp.cpp  SEIRemovalApp.h  SEIRemovalAppCfg.cpp  SEIRemovalAppCfg.h  seiremovalmain.cpp
dependencies/hm-modification/: createPatch.sh
ex1/: multiframe_path.py
libdash_mcnl/: libdash_mcnl_test.cpp
project/: libdash.sln  main.cpp
project/Main/: CMakeLists.txt  CMakeLists1.txt  Main.cpp  Main.vcxproj.filters  decOpt.txt
project/cfg/common/: ctc-common.cfg
project/cfg/rate/: ctc-r1.cfg  low.cfg  mid.cfg
project/cfg/sequence/: \  loot_down.cfg  loot_low.cfg  loot_mid.cfg  loot_s1.cfg
project/dependencies/HDRTools/: HDRTools.sln  Makefile  README.md
project/dependencies/HDRTools/common/: CMakeLists.txt  dependencies
project/dependencies/HDRTools/common/inc/: AddNoiseNormal.H  BufToImgBasic.H  ColorTransform.H  ColorTransformCL.H  ColorTransformClosedLoopY.H  ColorTransformFVDO.H  ColorTransformNull.H  ColorTransformYAdjustFull.H  ColorTransformYAdjustTele.H  ColorTransformYInter.H  ColorTransformYLin.H  Conv444to420Adaptive.H  Conv444to420BI.H  Conv444to420Generic.H  Conv444to422GenericOld.H  Conv444to422NN.H  ConvertBitDepth.H  ConvertColorFormatNull.H  DisplayGammaAdjust.H  DisplayGammaAdjustHLG.H  DistortionMetric.H  DistortionMetricBlockinessJ341.H  DistortionMetricMSSSIM.H  DistortionMetricPSNR.H  DistortionMetricVIF.H  DistortionTransferFunction.H  Eigenvalue.H  FrameFilterDeblock.H  FrameFilterNLMeans.H  FrameFilterWiener2DDark.H  FrameScale.H  FrameScaleBiCubic.H  FrameScaleCopy.H  FrameScaleHanning.H  FrameScaleSHVC.H  FrameScaleSineWindow.H  Global.H  IOTIFF.H  ImgToBuf.H  InputEXR.H  (+12 more)
project/dependencies/HDRTools/common/src/: AddAV1FilmGrain.cpp  AddNoiseNormal.cpp  AnalyzeGamut.cpp  BufToImgBasic.cpp  ColorTransformCL.cpp  ColorTransformClosedLoop.cpp  ColorTransformYAdjust.cpp  Conv420to444Generic.cpp  Conv420to444NN.cpp  Conv422to420Generic.cpp  Conv422to444Generic.cpp  Conv444to420Adaptive.cpp  ConvFixedToFloat.cpp  ConvFloatToFixed.cpp  ConvertBitDepth.cpp  DisplayGammaAdjust.cpp  DistortionMetricDeltaE.cpp  DistortionMetricGSSIM.cpp  DistortionMetricJVETMSSSIM.cpp  DistortionMetricRegionPSNR.cpp  DistortionMetricSigmaCompare.cpp  DistortionMetricTFSSIM.cpp  Eigenvalue.cpp  Frame.cpp  FrameFilter.cpp  FrameFilterNLMeans.cpp  FrameFilterWiener2D.cpp  FrameFilterWiener2DDark.cpp  FrameScale.cpp  FrameScaleHalf.cpp  FrameScaleHamming.cpp  FrameScaleLanczos.cpp  FrameScaleLanczosInt.cpp  FrameScaleSineWindow.cpp  IOFunctions.cpp  Input.cpp  InputDPX.cpp  InputPGM.cpp  Output.cpp  OutputAVI.cpp  (+7 more)
project/libdash/: libdash.vcxproj  libdash.vcxproj.filters
project/libdash/source/: libdash.cpp
project/libdash_mcnl/: CMakeLists.txt  PersistentHTTPConnection.h  TestChunk.h  libdash_mcnl_test.cpp  libdash_mcnl_test.vcxproj  libdash_mcnl_test.vcxproj.filters
project/server/: .createContent.sh.swp  createContent.sh
python/: downsample_ascii.py  multiframe.py  normalizeColor.py
resources/: unlitLine.filamat
server/: createContent.sh
source/app/PccAppColorConverter/: CMakeLists.txt
source/app/PccAppDecoder/: CMakeLists.txt
source/app/PccAppNormalGenerator/: CMakeLists.txt
source/app/PccAppVideoEncoder/: CMakeLists.txt
(+289 files in other folders)
